--- a/Source/en.lproj/TermsOfServices.htm
+++ b/Source/en.lproj/TermsOfServices.htm
@@ -1295,7 +1295,7 @@ style='color:black;mso-themecolor:text1'> that follows are agreements (the
 &quot;Agreements&quot;) between you and edX Inc. By using the edX Site, you
 accept and agree to be legally bound by the Agreements, whether or not you are
 a registered user. Please also read the </span><a
-href="https://www.edx.org/edx-privacy-policy">Privacy Policy</a><span
+href="https://campus.gov.il/privacy-policy">Privacy Policy</a><span
 style='color:black;mso-themecolor:text1'> for the edX Site before you use any
 portion of the edX Site. The Privacy Policy describes how your personal data is
 collected and processed when you use the edX Site. If you do not understand or
@@ -1619,7 +1619,7 @@ mso-themecolor:text1'><o:p>&nbsp;</o:p></span></p>
 padding:0cm;mso-padding-alt:0cm 0cm 8.0pt 0cm'><span lang=EN style='color:black;
 mso-themecolor:text1'>We care about the confidentiality and security of your
 personal information. Please see the </span><span lang=EN><a
-href="https://www.edx.org/edx-privacy-policy">Privacy Policy</a><span
+href="https://campus.gov.il/privacy-policy">Privacy Policy</a><span
 style='color:black;mso-themecolor:text1'> for more information about the
 collection and use of data on the edX Site.<o:p></o:p></span></span></p>
 
@@ -1690,7 +1690,7 @@ materials best suited to the learner), to improve our understanding of the
 learning process, and to evaluate and improve the effectiveness of our course
 materials, payment models, platform features, and offerings. We may publish or
 otherwise publicize results from this process, but, unless otherwise permitted
-under the </span><span lang=EN><a href="https://www.edx.org/edx-privacy-policy">Privacy
+under the </span><span lang=EN><a href="https://campus.gov.il/privacy-policy">Privacy
 Policy</a><span style='color:black;mso-themecolor:text1'>, those publications
 or public disclosures will not include your personal information.<o:p></o:p></span></span></p>
 
@@ -1777,7 +1777,7 @@ Site (collectively, the &quot;Members&quot;) may offer services and products
 for a fee (for example, course and program certificates). For anything that you
 choose to purchase on the edX Site, you agree to pay all applicable fees when
 due. As described in the </span><span lang=EN><a
-href="https://www.edx.org/edx-privacy-policy">Privacy Policy</a><span
+href="https://campus.gov.il/privacy-policy">Privacy Policy</a><span
 style='color:black;mso-themecolor:text1'>, the processing of your payment
 information is done by a third-party payment vendor, and you will be routed to
 a secure payment flow controlled by that vendor to complete the payment
@@ -1817,7 +1817,7 @@ order to authenticate your identity for a Verified Certificate, you will be
 prompted to take a webcam photo of yourself, as well as a photo of an
 acceptable form of photo ID (described below). Although these items are
 collected by edX in accordance with these TOS and the </span><span lang=EN><a
-href="https://www.edx.org/edx-privacy-policy">Privacy Policy</a><span
+href="https://campus.gov.il/privacy-policy">Privacy Policy</a><span
 style='color:black;mso-themecolor:text1'>, you should be aware that the actual
 authentication of your identity is performed by an edX third-party service
 provider and this information will be used only for the purpose of verifying
@@ -2220,7 +2220,7 @@ THROUGH THE EDX SITE OR ANY REFERENCE SITES IS AT YOUR OWN DISCRETION AND RISK,
 AND YOU WILL BE SOLELY RESPONSIBLE FOR ANY DAMAGE TO YOUR PROPERTY (INCLUDING
 YOUR COMPUTER SYSTEM) OR LOSS OF DATA THAT RESULTS FROM THE DOWNLOAD OR USE OF
 SUCH MATERIAL OR DATA, UNLESS OTHERWISE EXPRESSLY PROVIDED FOR IN THE </span></b><span
-lang=EN><a href="https://www.edx.org/edx-privacy-policy"><b style='mso-bidi-font-weight:
+lang=EN><a href="https://campus.gov.il/privacy-policy"><b style='mso-bidi-font-weight:
 normal'>PRIVACY POLICY</b></a><b style='mso-bidi-font-weight:normal'><span
 style='color:black;mso-themecolor:text1'>.<o:p></o:p></span></b></span></p>
 
