--- a/Source/es-419.lproj/TermsOfServices.htm
+++ b/Source/es-419.lproj/TermsOfServices.htm
@@ -1293,7 +1293,7 @@ lang=ES-TRAD style='color:black;mso-themecolor:text1;mso-ansi-language:ES-TRAD'>
 constituyen acuerdos (los “Acuerdos”) entre usted y edX. Al utilizar el Sitio,
 usted acepta y acuerda estar legalmente obligado por los Acuerdos, sea o no un
 usuario registrado. Por favor, lea también la </span><span lang=EN><a
-href="https://www.edx.org/es/edx-privacy-policy"><span lang=ES-TRAD
+href="https://campus.gov.il/accessibility-statement"><span lang=ES-TRAD
 style='mso-ansi-language:ES-TRAD'>Política de privacidad</span></a></span><span
 lang=ES-TRAD style='color:black;mso-themecolor:text1;mso-ansi-language:ES-TRAD'>
 del Sitio de edX antes de usarlo. La Política de privacidad describe de qué
@@ -1644,7 +1644,7 @@ mso-themecolor:text1;mso-ansi-language:ES-TRAD'><o:p>&nbsp;</o:p></span></p>
 0cm;mso-padding-alt:0cm 0cm 8.0pt 0cm'><span lang=ES-TRAD style='color:black;
 mso-themecolor:text1;mso-ansi-language:ES-TRAD'>Nos preocupamos por la
 confidencialidad y seguridad de su información personal. Consulte la </span><span
-lang=EN><a href="https://www.edx.org/es/edx-privacy-policy"><span lang=ES-TRAD
+lang=EN><a href="https://campus.gov.il/accessibility-statement"><span lang=ES-TRAD
 style='mso-ansi-language:ES-TRAD'>Política de privacidad</span></a></span><span
 lang=ES-TRAD style='color:black;mso-themecolor:text1;mso-ansi-language:ES-TRAD'>
 para obtener más información acerca de la recopilación y el uso de datos en el
@@ -1723,7 +1723,7 @@ aprendizaje y evaluar y mejorar la efectividad de nuestros materiales de los
 cursos, modelos de pago, funciones de plataformas y ofertas. Podemos publicar,
 o de otra manera hacer públicos, los resultados de este proceso, pero, a menos
 que esta </span><span lang=EN><a
-href="https://www.edx.org/es/edx-privacy-policy"><span lang=ES-TRAD
+href="https://campus.gov.il/accessibility-statement"><span lang=ES-TRAD
 style='mso-ansi-language:ES-TRAD'>Política de privacidad</span></a></span><span
 lang=ES-TRAD style='color:black;mso-themecolor:text1;mso-ansi-language:ES-TRAD'>
 permita lo contrario, esas publicaciones o divulgaciones públicas no incluirán
@@ -1819,7 +1819,7 @@ cursos y programas en el Sitio de edX (en conjunto, los “Miembros”) pueden
 ofrecer servicios y productos por una tarifa (por ejemplo, certificados de
 cursos y programas). Usted acepta pagar todas las tarifas de lo que compre en
 el Sitio de edX cuando corresponda hacerlo. Como se describe en la </span><span
-lang=EN><a href="https://www.edx.org/es/edx-privacy-policy"><span lang=ES-TRAD
+lang=EN><a href="https://campus.gov.il/accessibility-statement"><span lang=ES-TRAD
 style='mso-ansi-language:ES-TRAD'>Política de privacidad</span></a></span><span
 lang=ES-TRAD style='color:black;mso-themecolor:text1;mso-ansi-language:ES-TRAD'>,
 un proveedor externo de edX lleva a cabo el procesamiento de su información de
@@ -1862,7 +1862,7 @@ Certificado verificado, se le pedirá que se tome una foto con su cámara web,
 así como una foto de una forma aceptable de identificación con foto (que se
 describe a continuación). Aunque estos elementos son recopilados por edX de
 acuerdo con estas Condiciones de servicio y la </span><span lang=EN><a
-href="https://www.edx.org/es/edx-privacy-policy"><span lang=ES-TRAD
+href="https://campus.gov.il/accessibility-statement"><span lang=ES-TRAD
 style='mso-ansi-language:ES-TRAD'>Política de privacidad</span></a></span><span
 lang=ES-TRAD style='color:black;mso-themecolor:text1;mso-ansi-language:ES-TRAD'>,
 debe tener en cuenta que la autentificación real de su identidad es realizada
@@ -2300,7 +2300,7 @@ CUENTA Y RIESGO, Y USTED SERÁ EL ÚNICO RESPONSABLE DE CUALQUIER DAÑO A SU
 PROPIEDAD (INCLUIDO SU SISTEMA INFORMÁTICO ) O PÉRDIDA DE DATOS QUE RESULTE DE
 LA DESCARGA O EL USO DE DICHO MATERIAL O DATOS, A MENOS QUE SE ENCUENTRE
 EXPRESAMENTE PREVISTO EN LA </span></b><span lang=EN><a
-href="https://www.edx.org/es/edx-privacy-policy"><b style='mso-bidi-font-weight:
+href="https://campus.gov.il/accessibility-statement"><b style='mso-bidi-font-weight:
 normal'><span lang=ES-TRAD style='mso-ansi-language:ES-TRAD'>POLÍTICA DE
 PRIVACIDAD</span></b></a></span><b style='mso-bidi-font-weight:normal'><span
 lang=ES-TRAD style='color:black;mso-themecolor:text1;mso-ansi-language:ES-TRAD'>.<o:p></o:p></span></b></p>
