--- a/Source/en.lproj/MobileAppEula.htm
+++ b/Source/en.lproj/MobileAppEula.htm
@@ -715,7 +715,7 @@ auto;text-indent:-18.0pt;mso-list:l0 level1 lfo1'><![if !supportLists]><span
 style='font-size:9.5pt;font-family:Symbol;mso-fareast-font-family:Symbol;
 mso-bidi-font-family:Symbol;color:#222222'><span style='mso-list:Ignore'>·<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span></span><![endif]><a
-href="https://www.edx.org/edx-privacy-policy"><span style='font-size:9.5pt;
+href="https://campus.gov.il/privacy-policy"><span style='font-size:9.5pt;
 font-family:Arial;mso-fareast-font-family:"Times New Roman";background:white'>PRIVACY
 POLICY</span></a><span style='font-size:9.5pt;font-family:Arial;mso-fareast-font-family:
 "Times New Roman";color:#222222;background:white'>, AND<o:p></o:p></span></p>
